--- a/frontend/src/pages/PlatformPage/PlatformPage.module.css
+++ b/frontend/src/pages/PlatformPage/PlatformPage.module.css
@@ -720,7 +720,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(10, 15, 30, 0.65);
+  background-color: transparent;
   z-index: 1;
 }
 
